--- a/config.html
+++ b/config.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Config v2.7.2 — MoskoGás</title>
+<title>Config v2.7.3 — MoskoGás</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -30,8 +30,8 @@
 <body>
 <div id="nav-placeholder"></div>
 <div class="container">
-  <div class="version-badge">v2.7.2 — config</div>
-  <h1>⚙️ Configurações v2.7.2</h1>
+  <div class="version-badge">v2.7.3 — config</div>
+  <h1>⚙️ Configurações v2.7.3</h1>
 
   <!-- API Key (admin only) -->
   <div class="card" id="apiKeySection">
@@ -506,8 +506,10 @@ function searchFavProduct(q) {
 }
 
 async function addFavByIdx(idx) {
+  console.log('addFavByIdx called with idx:', idx);
+  alert('Clicou! idx=' + idx);
   const product = _favSearchResults[idx];
-  if (!product) return;
+  if (!product) { alert('Product not found at idx ' + idx); return; }
   addFav(product);
 }
 
