--- a/gestao.html
+++ b/gestao.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Gestão v2.8.1 — MoskoGás</title>
+<title>Gestão v2.8.2 — MoskoGás</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; }
@@ -74,7 +74,7 @@
   <button class="btn btn-orange" onclick="load()" title="Recarregar pedidos">🔄 Atualizar</button>
   <span id="count-badge" style="font-size:12px;color:#64748b;margin-left:4px"></span>
   <span id="bling-indicator" title="Verificando Bling..." style="background:#94a3b8;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700;cursor:pointer" onclick="checkBlingStatus(true)">⏳ Bling</span>
-  <span title="Versão do sistema" style="background:#6366f1;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700;letter-spacing:.5px">v2.8.1</span>
+  <span title="Versão do sistema" style="background:#6366f1;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700;letter-spacing:.5px">v2.8.2</span>
   <label style="display:flex;align-items:center;gap:6px;font-size:13px;margin-left:auto;cursor:pointer;">
     <input type="checkbox" id="autoRefresh" onchange="toggleAuto()"> Auto (30s)
   </label>
@@ -141,7 +141,7 @@
 
 <script src="shared.js"></script>
 <script>
-// v2.8.1
+// v2.8.2
 document.getElementById('nav-placeholder').innerHTML = NAV_HTML;
 checkApiKey();
 
@@ -449,7 +449,7 @@ async function selectDriver(orderId, driverId) {
 async function markDelivered(id) {
   if (!confirm(`Marcar pedido #${id} como ENTREGUE?`)) return;
   try {
-    await api(`/api/order/${id}/mark-delivered`, { method: 'POST' });
+    await api(`/api/order/${id}/mark-delivered`, { method: 'POST', body: JSON.stringify({}) });
     toast('✅ Pedido entregue!');
     load();
   } catch(e) { toast(e.message, 'error'); }
