--- a/config.html
+++ b/config.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Config v2.7.4 — MoskoGás</title>
+<title>Config v2.8.0 — MoskoGás</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -30,8 +30,8 @@
 <body>
 <div id="nav-placeholder"></div>
 <div class="container">
-  <div class="version-badge">v2.7.4 — config</div>
-  <h1>⚙️ Configurações v2.7.4</h1>
+  <div class="version-badge">v2.8.0 — config</div>
+  <h1>⚙️ Configurações v2.8.0</h1>
 
   <!-- API Key (admin only) -->
   <div class="card" id="apiKeySection">
@@ -133,18 +133,50 @@
     <div id="perm-status"></div>
   </div>
 
-  <!-- Produtos Favoritos -->
-  <div class="card" id="favSection">
-    <h2>⭐ Produtos Favoritos (Atalho no Pedido)</h2>
-    <p style="font-size:12px;color:#94a3b8;margin-bottom:12px">Produtos marcados como favoritos aparecem como botões rápidos na tela de pedido. Arraste para reordenar.</p>
+  <!-- Produtos MoskoGás -->
+  <div class="card" id="productsSection">
+    <h2>📦 Produtos MoskoGás</h2>
+    <p style="font-size:12px;color:#94a3b8;margin-bottom:12px">Cadastre produtos com preço sugerido. Marque ⭐ para aparecer como atalho rápido na tela de pedido.</p>
 
+    <!-- Importar do Bling -->
     <div style="position:relative;margin-bottom:12px">
-      <input id="favSearch" placeholder="🔍 Buscar produto no Bling para adicionar..." oninput="searchFavProduct(this.value)" autocomplete="off" style="margin-bottom:0">
-      <div id="favSuggestions" style="display:none;position:absolute;left:0;right:0;z-index:50;border:2px solid #f97316;border-top:none;border-radius:0 0 8px 8px;background:#fff;max-height:200px;overflow-y:auto;box-shadow:0 4px 12px rgba(0,0,0,0.1)"></div>
+      <input id="prodBlingSearch" placeholder="🔍 Importar produto do Bling..." oninput="searchBlingProduct(this.value)" autocomplete="off" style="margin-bottom:0">
+      <div id="prodBlingSuggestions" style="display:none;position:absolute;left:0;right:0;z-index:50;border:2px solid #f97316;border-top:none;border-radius:0 0 8px 8px;background:#fff;max-height:200px;overflow-y:auto;box-shadow:0 4px 12px rgba(0,0,0,0.1)"></div>
     </div>
 
-    <div id="favList" style="min-height:40px">
-      <div style="color:#94a3b8;text-align:center;padding:16px;font-size:13px">⏳ Carregando favoritos...</div>
+    <!-- Lista de produtos -->
+    <div id="appProductsList" style="min-height:40px">
+      <div style="color:#94a3b8;text-align:center;padding:16px;font-size:13px">⏳ Carregando produtos...</div>
+    </div>
+
+    <!-- Adicionar manual -->
+    <div style="margin-top:10px;border-top:1px solid #e2e8f0;padding-top:10px">
+      <button onclick="showAddProductModal()" style="background:#f1f5f9;border:1px solid #e2e8f0;border-radius:6px;padding:6px 14px;font-size:12px;cursor:pointer;font-weight:600;color:#334155">➕ Cadastrar Produto Manual</button>
+    </div>
+  </div>
+
+  <!-- Modal Editar Produto -->
+  <div id="productModal" style="display:none;position:fixed;inset:0;z-index:999;background:rgba(0,0,0,0.5);display:none;justify-content:center;align-items:center">
+    <div style="background:#fff;border-radius:12px;padding:20px;width:90%;max-width:400px;box-shadow:0 8px 24px rgba(0,0,0,0.2)">
+      <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:12px">
+        <h3 id="productModalTitle" style="margin:0;font-size:16px">Editar Produto</h3>
+        <button onclick="closeProductModal()" style="background:none;border:none;font-size:20px;cursor:pointer;color:#94a3b8">✕</button>
+      </div>
+      <input id="pm_id" type="hidden">
+      <input id="pm_bling_id" type="hidden">
+      <div style="margin-bottom:8px"><label style="font-size:12px;font-weight:600;color:#64748b">Nome</label><input id="pm_name" style="width:100%;padding:8px;border:1px solid #e2e8f0;border-radius:6px;font-size:14px"></div>
+      <div style="display:flex;gap:8px;margin-bottom:8px">
+        <div style="flex:1"><label style="font-size:12px;font-weight:600;color:#64748b">Código</label><input id="pm_code" style="width:100%;padding:8px;border:1px solid #e2e8f0;border-radius:6px;font-size:14px"></div>
+        <div style="flex:1"><label style="font-size:12px;font-weight:600;color:#64748b">Preço Sugerido (R$)</label><input id="pm_price" type="text" inputmode="decimal" style="width:100%;padding:8px;border:1px solid #e2e8f0;border-radius:6px;font-size:14px;font-weight:700"></div>
+      </div>
+      <div style="display:flex;gap:12px;margin-bottom:12px">
+        <label style="display:flex;align-items:center;gap:6px;font-size:13px;cursor:pointer"><input id="pm_favorite" type="checkbox"> ⭐ Favorito (atalho no pedido)</label>
+        <label style="display:flex;align-items:center;gap:6px;font-size:13px;cursor:pointer"><input id="pm_ativo" type="checkbox" checked> Ativo</label>
+      </div>
+      <div style="display:flex;gap:8px;justify-content:flex-end">
+        <button onclick="closeProductModal()" style="background:#f1f5f9;border:1px solid #e2e8f0;border-radius:6px;padding:8px 16px;font-size:13px;cursor:pointer">Cancelar</button>
+        <button onclick="saveProduct()" style="background:#f97316;color:#fff;border:none;border-radius:6px;padding:8px 16px;font-size:13px;font-weight:700;cursor:pointer">💾 Salvar</button>
+      </div>
     </div>
   </div>
 
@@ -438,162 +470,176 @@ function resetFotoConfig() {
 }
 
 // ── Produtos Favoritos ──────────────────────────────────────
-let _favs = [];
-let _favSearchTimer;
+// ── PRODUTOS MOSKOGAS (preços sugeridos + favoritos) ─────────
+let _appProducts = [];
+let _blingSearchTimer;
+let _blingSearchResults = [];
 
-async function loadFavoritos() {
+async function loadAppProducts() {
   try {
-    _favs = await api('/api/products/favorites');
-    renderFavList();
+    _appProducts = await api('/api/app-products');
+    renderAppProducts();
   } catch(e) {
-    document.getElementById('favList').innerHTML = `<div style="color:#dc2626;font-size:13px;padding:12px">❌ ${e.message}</div>`;
+    document.getElementById('appProductsList').innerHTML = `<div style="color:#dc2626;font-size:13px;padding:12px">❌ ${e.message}</div>`;
   }
 }
 
-function renderFavList() {
-  const el = document.getElementById('favList');
-  if (!_favs.length) {
-    el.innerHTML = '<div style="color:#94a3b8;text-align:center;padding:16px;font-size:13px">Nenhum favorito ainda. Busque um produto acima para adicionar.</div>';
+function renderAppProducts() {
+  const el = document.getElementById('appProductsList');
+  if (!_appProducts.length) {
+    el.innerHTML = '<div style="color:#94a3b8;text-align:center;padding:16px;font-size:13px">Nenhum produto cadastrado. Importe do Bling ou cadastre manualmente.</div>';
     return;
   }
-  el.innerHTML = _favs.map((f, i) => `
-    <div class="fav-item" draggable="true" data-id="${f.id}" data-idx="${i}"
-         ondragstart="favDragStart(event)" ondragover="favDragOver(event)" ondrop="favDrop(event)"
-         style="display:flex;align-items:center;gap:10px;padding:10px 12px;background:#fff;border:2px solid #e2e8f0;border-radius:8px;margin-bottom:6px;cursor:grab;transition:border-color 0.15s">
-      <span style="color:#94a3b8;font-size:14px;cursor:grab" title="Arrastar para reordenar">⠿</span>
-      <span style="flex:1;font-size:14px;font-weight:600">${f.name}</span>
-      <span style="font-size:12px;color:#94a3b8">${f.code || ''}</span>
-      <span style="font-size:13px;font-weight:700;color:#f97316">R$ ${parseFloat(f.price||0).toFixed(2)}</span>
-      <button onclick="removeFav(${f.id})" style="background:#fee2e2;color:#dc2626;border:none;border-radius:6px;padding:5px 10px;font-size:12px;font-weight:700;cursor:pointer" title="Remover favorito">✕</button>
+  el.innerHTML = `
+    <div style="display:grid;grid-template-columns:1fr auto auto auto auto;gap:0;font-size:12px;font-weight:700;color:#64748b;padding:6px 10px;border-bottom:2px solid #e2e8f0">
+      <span>Produto</span><span style="text-align:center;width:50px">Código</span><span style="text-align:right;width:80px">Preço</span><span style="text-align:center;width:40px">⭐</span><span style="width:60px"></span>
+    </div>
+  ` + _appProducts.map(p => `
+    <div style="display:grid;grid-template-columns:1fr auto auto auto auto;gap:0;align-items:center;padding:8px 10px;border-bottom:1px solid #f1f5f9;${!p.ativo?'opacity:0.4':''}">
+      <span style="font-size:13px;font-weight:600">${p.name}</span>
+      <span style="font-size:11px;color:#94a3b8;text-align:center;width:50px">${p.code||'-'}</span>
+      <span style="font-size:13px;font-weight:800;color:#f97316;text-align:right;width:80px">R$ ${parseFloat(p.price||0).toFixed(2)}</span>
+      <span style="text-align:center;width:40px">${p.is_favorite?'⭐':''}</span>
+      <span style="display:flex;gap:4px;width:60px">
+        <button onmousedown="event.preventDefault();editProduct(${p.id})" style="background:#e0f2fe;color:#0369a1;border:none;border-radius:4px;padding:3px 6px;font-size:11px;cursor:pointer" title="Editar">✏️</button>
+        <button onmousedown="event.preventDefault();deleteProduct(${p.id})" style="background:#fee2e2;color:#dc2626;border:none;border-radius:4px;padding:3px 6px;font-size:11px;cursor:pointer" title="Excluir">🗑️</button>
+      </span>
     </div>
   `).join('');
 }
 
-let _favSearchResults = [];
-
-function searchFavProduct(q) {
-  clearTimeout(_favSearchTimer);
-  const box = document.getElementById('favSuggestions');
+function searchBlingProduct(q) {
+  clearTimeout(_blingSearchTimer);
+  const box = document.getElementById('prodBlingSuggestions');
   if (q.length < 2) { box.style.display = 'none'; return; }
   box.style.display = 'block';
-  box.innerHTML = '<div style="padding:10px 14px;color:#94a3b8;font-size:12px">🔍 Buscando...</div>';
-
-  _favSearchTimer = setTimeout(async () => {
+  box.innerHTML = '<div style="padding:10px 14px;color:#94a3b8;font-size:12px">🔍 Buscando no Bling...</div>';
+  _blingSearchTimer = setTimeout(async () => {
     try {
       const list = await api(`/api/products/search?q=${encodeURIComponent(q)}`);
       if (!list || !list.length) {
         box.innerHTML = '<div style="padding:10px 14px;color:#94a3b8;font-size:12px">Nenhum produto encontrado</div>';
-        _favSearchResults = [];
+        _blingSearchResults = [];
         return;
       }
-      _favSearchResults = list;
-      // Filtrar já favoritados
-      const favIds = new Set(_favs.map(f => String(f.bling_id)));
+      _blingSearchResults = list;
+      const existIds = new Set(_appProducts.map(p => String(p.bling_id)));
       box.innerHTML = list.map((p, i) => {
-        const jaFav = favIds.has(String(p.id));
-        return `<div onmousedown="${jaFav ? '' : `event.preventDefault();addFavByIdx(${i})`}"
-          style="padding:10px 14px;cursor:${jaFav ? 'default' : 'pointer'};display:flex;justify-content:space-between;align-items:center;border-bottom:1px solid #f1f5f9;${jaFav ? 'opacity:0.5' : ''};background:#fff;"
-          ${!jaFav ? 'onmouseover="this.style.background=\'#fff7ed\'" onmouseout="this.style.background=\'#fff\'"' : ''}>
+        const exists = existIds.has(String(p.id));
+        return `<div onmousedown="${exists ? '' : `event.preventDefault();importBlingProduct(${i})`}"
+          style="padding:10px 14px;cursor:${exists ? 'default' : 'pointer'};display:flex;justify-content:space-between;align-items:center;border-bottom:1px solid #f1f5f9;${exists ? 'opacity:0.5' : ''};background:#fff;"
+          ${!exists ? 'onmouseover="this.style.background=\'#fff7ed\'" onmouseout="this.style.background=\'#fff\'"' : ''}>
           <span><strong>${p.name||'Produto'}</strong> ${p.code ? `<small style="color:#94a3b8">(${p.code})</small>` : ''}</span>
-          <span style="font-weight:700;color:${jaFav ? '#94a3b8' : '#f97316'};font-size:13px">${jaFav ? '✅ Já favorito' : 'R$ ' + parseFloat(p.price||0).toFixed(2) + ' ➕'}</span>
+          <span style="font-weight:700;color:${exists ? '#94a3b8' : '#f97316'};font-size:13px">${exists ? '✅ Já cadastrado' : 'R$ ' + parseFloat(p.price||0).toFixed(2) + ' ➕'}</span>
         </div>`;
       }).join('');
     } catch(e) {
       box.innerHTML = `<div style="padding:10px 14px;color:#dc2626;font-size:12px">❌ ${e.message}</div>`;
-      _favSearchResults = [];
+      _blingSearchResults = [];
     }
   }, 350);
 }
 
-async function addFavByIdx(idx) {
-  const product = _favSearchResults[idx];
-  if (!product) return;
-  addFav(product);
-}
-
-async function addFav(product) {
+async function importBlingProduct(idx) {
+  const p = _blingSearchResults[idx];
+  if (!p) return;
   try {
-    await api('/api/products/favorites', {
+    await api('/api/app-products/import-bling', {
       method: 'POST',
-      body: JSON.stringify({ bling_id: String(product.id), name: product.name, code: product.code || '', price: product.price || 0 })
+      body: JSON.stringify({ bling_id: String(p.id), name: p.name, code: p.code || '', price: p.price || 0, is_favorite: false })
     });
-    document.getElementById('favSearch').value = '';
-    document.getElementById('favSuggestions').style.display = 'none';
-    // Adiciona na lista local imediatamente
-    _favs.push({ id: Date.now(), bling_id: String(product.id), name: product.name, code: product.code || '', price: product.price || 0 });
-    renderFavList();
-    showToast('⭐ Favorito adicionado!', 'success');
-    // Recarrega do servidor pra pegar ID real
-    setTimeout(() => loadFavoritos(), 500);
-  } catch(e) {
-    showToast('❌ ' + e.message, 'error');
-  }
+    document.getElementById('prodBlingSearch').value = '';
+    document.getElementById('prodBlingSuggestions').style.display = 'none';
+    _appProducts.push({ id: Date.now(), bling_id: String(p.id), name: p.name, code: p.code||'', price: p.price||0, is_favorite: 0, ativo: 1 });
+    renderAppProducts();
+    showToast('📦 Produto importado!', 'success');
+    setTimeout(() => loadAppProducts(), 500);
+  } catch(e) { showToast('❌ ' + e.message, 'error'); }
 }
 
-async function removeFav(id) {
-  if (!confirm('Remover este favorito?')) return;
+function showAddProductModal() {
+  document.getElementById('pm_id').value = '';
+  document.getElementById('pm_bling_id').value = '';
+  document.getElementById('pm_name').value = '';
+  document.getElementById('pm_code').value = '';
+  document.getElementById('pm_price').value = '';
+  document.getElementById('pm_favorite').checked = false;
+  document.getElementById('pm_ativo').checked = true;
+  document.getElementById('productModalTitle').textContent = 'Novo Produto';
+  document.getElementById('productModal').style.display = 'flex';
+}
+
+function editProduct(id) {
+  const p = _appProducts.find(x => x.id === id);
+  if (!p) return;
+  document.getElementById('pm_id').value = p.id;
+  document.getElementById('pm_bling_id').value = p.bling_id || '';
+  document.getElementById('pm_name').value = p.name;
+  document.getElementById('pm_code').value = p.code || '';
+  document.getElementById('pm_price').value = parseFloat(p.price||0).toFixed(2);
+  document.getElementById('pm_favorite').checked = !!p.is_favorite;
+  document.getElementById('pm_ativo').checked = p.ativo !== 0;
+  document.getElementById('productModalTitle').textContent = 'Editar Produto';
+  document.getElementById('productModal').style.display = 'flex';
+}
+
+function closeProductModal() {
+  document.getElementById('productModal').style.display = 'none';
+}
+
+function _parsePrice(val) {
+  if (typeof val !== 'string') val = String(val || '0');
+  val = val.trim().replace(/\s/g, '');
+  if (val.includes(',')) val = val.replace('.', '').replace(',', '.');
+  return parseFloat(val) || 0;
+}
+
+async function saveProduct() {
+  const id = document.getElementById('pm_id').value;
+  const data = {
+    bling_id: document.getElementById('pm_bling_id').value || null,
+    name: document.getElementById('pm_name').value.trim(),
+    code: document.getElementById('pm_code').value.trim(),
+    price: _parsePrice(document.getElementById('pm_price').value),
+    is_favorite: document.getElementById('pm_favorite').checked ? 1 : 0,
+    ativo: document.getElementById('pm_ativo').checked ? 1 : 0
+  };
+  if (!data.name) { showToast('❌ Nome obrigatório', 'error'); return; }
+  if (id) data.id = parseInt(id);
   try {
-    await api(`/api/products/favorites/${id}`, { method: 'DELETE' });
-    // Remove imediatamente da tela
-    _favs = _favs.filter(f => f.id !== id);
-    renderFavList();
-    showToast('🗑️ Favorito removido', 'warning');
-  } catch(e) {
-    showToast('❌ ' + e.message, 'error');
-  }
+    await api('/api/app-products', { method: 'POST', body: JSON.stringify(data) });
+    closeProductModal();
+    showToast('💾 Produto salvo!', 'success');
+    await loadAppProducts();
+  } catch(e) { showToast('❌ ' + e.message, 'error'); }
 }
 
-// Drag & drop reorder
-let _dragIdx = null;
-function favDragStart(e) {
-  _dragIdx = parseInt(e.target.closest('[data-idx]').dataset.idx);
-  e.dataTransfer.effectAllowed = 'move';
-  e.target.closest('.fav-item').style.opacity = '0.5';
-}
-function favDragOver(e) {
-  e.preventDefault();
-  e.dataTransfer.dropEffect = 'move';
-  const item = e.target.closest('.fav-item');
-  if (item) item.style.borderColor = '#f97316';
-}
-async function favDrop(e) {
-  e.preventDefault();
-  const target = e.target.closest('[data-idx]');
-  if (!target) return;
-  const dropIdx = parseInt(target.dataset.idx);
-  target.style.borderColor = '#e2e8f0';
-
-  if (_dragIdx === null || _dragIdx === dropIdx) return;
-  // Reorder array
-  const moved = _favs.splice(_dragIdx, 1)[0];
-  _favs.splice(dropIdx, 0, moved);
-  renderFavList();
-  // Save to backend
+async function deleteProduct(id) {
+  if (!confirm('Excluir este produto?')) return;
   try {
-    await api('/api/products/favorites/reorder', {
-      method: 'PATCH',
-      body: JSON.stringify({ order: _favs.map(f => f.id) })
-    });
-  } catch(e) { console.error('Erro reorder:', e); }
-  _dragIdx = null;
+    await api(`/api/app-products/${id}`, { method: 'DELETE' });
+    _appProducts = _appProducts.filter(p => p.id !== id);
+    renderAppProducts();
+    showToast('🗑️ Produto excluído', 'warning');
+  } catch(e) { showToast('❌ ' + e.message, 'error'); }
 }
 
 document.addEventListener('click', e => {
-  if (!e.target.closest('#favSearch') && !e.target.closest('#favSuggestions'))
-    document.getElementById('favSuggestions').style.display = 'none';
+  if (!e.target.closest('#prodBlingSearch') && !e.target.closest('#prodBlingSuggestions'))
+    document.getElementById('prodBlingSuggestions').style.display = 'none';
 });
 
-// Esconder seção favoritos para não-admin
+// Esconder seção produtos para não-admin
 if (_cfgUser && _cfgUser.role !== 'admin') {
-  const fs = document.getElementById('favSection');
-  if (fs) fs.style.display = 'none';
+  const ps = document.getElementById('productsSection');
+  if (ps) ps.style.display = 'none';
 }
 
 // ── Init ─────────────────────────────────────────────────────
 checkStreetsCount();
 carregarFotoConfig();
 carregarPermissoes();
-loadFavoritos();
+loadAppProducts();
 </script>
 </body>
 </html>
